--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       media="only screen and (min-width:720px)"
       href="css/desktop.css"
     />
-    <script>
-      console.dir(document);
+    <script
+      src="js/myScript.js"></script>
     </script>
   </head>
   <body>
