--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       media="only screen and (min-width:720px)"
       href="css/desktop.css"
     />
-    <script
-      src="js/myScript.js"></script>
-    </script>
+    <script src="js/myScript.js" defer></script>
   </head>
   <body>
     <div class="container">
